add_executable(CollectionsTest Utilities/CollectionsTest.cpp)
target_link_libraries(CollectionsTest GeneralEngine)

add_executable(AccessorTest Utilities/AccessorTest.cpp)
target_link_libraries(AccessorTest GeneralEngine)

add_executable(CoreTest Core/CoreTest.cpp)
target_link_libraries(CoreTest GeneralEngine)

add_executable(RecursiveMutexTest Utilities/RecursiveMutexTest.cpp)
target_link_libraries(RecursiveMutexTest GeneralEngine)
